# Discord-pre-bot

./: LICENSE  docker-compose.yml  railway.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
ai-service/: Dockerfile  requirements.txt
discord-bot/: .env.example  .gitignore  README.md
discord-bot/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
discord-bot/.github/workflows/: ci.yml
discord-bot/ai-service/: detector.py  main.py
discord-bot/rust-core/: Cargo.toml  Dockerfile
discord-bot/rust-core/migrations/: 0001_initial.sql
discord-bot/rust-core/src/: main.rs
discord-bot/rust-core/src/commands/: config.rs  info.rs  mod.rs  moderation.rs  roles.rs  setup.rs
discord-bot/rust-core/src/db/: models.rs
discord-bot/rust-core/src/events/: member.rs  message.rs  mod.rs
discord-bot/rust-core/src/protection/: ai.rs  links.rs  mod.rs  raid.rs  spam.rs
rust-core/: Cargo.toml  Dockerfile
rust-core/migrations/: 0001_initial.sql
rust-core/src/: main.rs
rust-core/src/commands/: config.rs  info.rs  moderation.rs  roles.rs  setup.rs
rust-core/src/db/: models.rs
rust-core/src/events/: member.rs  message.rs  mod.rs
rust-core/src/protection/: ai.rs  links.rs  raid.rs  spam.rs
