[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Discord
serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend", "model", "cache"] }
poise = "0.6"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database (no macros — avoids DATABASE_URL requirement at compile time)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenvy = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Rate limiting
dashmap = "5"

# Pin heck to compatible version
heck = "=0.4.0"

# Pin unicode-segmentation to compatible version
unicode-segmentation = "=1.11.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
